# aksdp

./: .env  .envrc  .gitignore  LICENSE  README.md  README_ja.md  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: python-app.yml
aksdp/data/: __init__.py  data.py  dataframe_data.py  json_data.py  raw_data.py  sqlalchemy_model_data.py
aksdp/dataset/: __init__.py  dataset.py
aksdp/graph/: __init__.py  concurrent_graph.py  debug_graph.py  graph.py  graph_task.py
aksdp/repository/: __init__.py  localfile_repository.py  pandas_db_repository.py  repository.py  s3file_repository.py  sqlalchemy_repository.py
aksdp/task/: __init__.py  task.py
aksdp/util/: __init__.py  airflow.py  graph_factory.py  plantuml.py
examples/1_basic_data_process/: main.py
examples/2_graph/: main.py
examples/2_graph_serial/: main.py
examples/3.5_graph_concurrent/: main.py
examples/3_graph_branch_merge/: main.py
examples/3_sqlalchemy_model_sequential/: main.py
examples/4_graph_dynamic/: main.py
examples/4_sqlalchemy_model_sequential/: main.py
examples/5_airflow/: graph_to_dag.py
examples/6_airflow/: graph_to_dag.py
examples/7_debug/: main.py
examples/8_graph_from_yaml/: graph.yml  graph_2.json  main.py
src/data/: data.py  dataframe_data.py  json_data.py  raw_data.py  sqlalchemy_model_data.py
src/dataset/: dataset.py
src/graph/: graph.py
src/task/: task.py
tests/: test_graph.py  test_graph_factory.py  test_json_data.py  test_localfile_repository.py  test_pandas_db_repository.py  test_s3file_repository.py  test_sqlalchemy_repository.py
(+6 files in other folders)
