[tool.poetry]
name = "aksdp"
version = "0.0.1-1"
description = "Simple DataPipeline Library"
authors = ["Y.Arimitsu <yoshikazu_arimitsu@albert2005.co.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
sqlalchemy = "^1.3.17"
pandas = "^1.0.4"
boto3 = "^1.13.25"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"

[tool.black]
line-length = 120
target-version = ['py36']
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

