[tool.poetry]
name = "aksdp"
version = "0.0.1-5"
description = "Simple DataPipeline Library"
authors = ["Y.Arimitsu <yoshikazu_arimitsu@albert2005.co.jp>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/YoshikazuArimitsu/aksdp"
keywords = [
    "data",
    "pipeline"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.6.1"
sqlalchemy = { version = "^1.3.0", optional = true }
pandas = { version = ">=0.25.0", optional = true}
boto3 = { version = "^1.0.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"

[tool.black]
line-length = 120
target-version = ['py36']
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

